nambahin export pdf

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_KEY=base64:Qoh1jkvWe1l12H1rd5t5XN/tIsLR8qePUJvvgI8vQ0s=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u161769766_posyandu_db
+DB_USERNAME=u161769766_adminDahlia
+DB_PASSWORD=adminDahlia123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
