--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.31",
+        "prettier": "3.3.3",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
     },
